--- a/app/scss/landing_desktop/_section_recall.scss
+++ b/app/scss/landing_desktop/_section_recall.scss
@@ -3,6 +3,8 @@
 .recall {
   .recall-box {
     display: flex;
+    width: 90%;
+    margin: 0 auto;
     .recall-left {
       width: 235px;
     }
